# AutonomousVehicleVision

./: .gitattributes  README.md  msg.txt  requiments.txt
src/control_2025/: CMakeLists.txt  package.xml
src/control_2025/scripts/: detector.py  detector_sub.py  video_viewer.py  video_viewer_sub.py
src/image_processing_2025/: CMakeLists.txt  package.xml
src/image_processing_2025/msg/: DetectedSign.msg  SignList.msg
src/image_processing_2025/scripts/: balanced_micron.pth  camera_node.py  detection_and_classification.py  only_detection_and_classification.py  yolopX_demo.py  yolopv2_demo copy.py  yolopv2_demo.py
src/image_processing_2025/scripts/YOLOPv2/: yolopv2.ipynb
src/simulation_2025/: CMakeLists.txt  package.xml
src/simulation_2025/launch/: robot_spawner.launch.py  teknofest_IGN.launch.py
src/simulation_2025/models/: TeknofestWORLDV2.sdf  tasarimWORLD.sdf
src/simulation_2025/scripts/: cmd_vel_publisher.py
src/simulation_2025/urdf/: otagg_car.urdf.xacro  otagg_car_gazebo.xacro
